<resources>


    <string name="app_name">sample_project</string>
    <string name="action_settings">Settings</string>


    <!-- Error Messages -->
    <string name="error_loading_image">An error occurred while loading the image</string>
    <string name="no_image_selected">Please select an image</string>


    <!-- TierList Browser Menu-->
    <string name="tier_list_browser_title">Your Tier Lists</string>
    <string name="create_tier_list_button">Create New Tier List</string>
    <string name="edit_tier_list_button">Edit Tier List</string>
    <string name="delete_tier_list_button">Delete Tier List</string>
    <!-- TierList Browser Recycler View-->
    <string name="edit_alt_text">Edit</string>
    <string name="delete_alt_text" delete_alt_text="Delete">Delete</string>

    <!-- Template Browser Menu-->
    <string name="template_browser_title">Choose a Template</string>
    <string name="new_template_button">Start from Scratch</string>
    <!-- Template Browser Recycler View-->
    <string name="template_thumbnail">Template Thumbnail</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="item_description">Description</string>
    <string name="item_title">Title</string>
    <string name="item_hint_tags_comma_separated">Tags (comma separated)</string>
    <string name="button_add_to_do">Add To-Do</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_template">Configuration</string>
    <string name="tier_list_name_hint">Tier List Name</string>
    <string name="select_image">Select Image</string>
    <string name="select_thumbnail_image">Thumbnail</string>
    <string name="create_button">Confirm</string>
    <string name="or">Or</string>
    <string name="add_an_item">Add an Item</string>
    <string name="item_name">Item Name</string>
    <string name="default_toolbar_title">TierList</string>
    <string name="configure_tier_list">configure tier list</string>
    <string name="choose_a_color">Choose a Color</string>
    <string name="edit_tier">Edit Tier</string>
    <string name="tier_label">Tier Label</string>
    <string name="test_text">test text test text test text test text</string>
    <string name="unranked">Unranked</string>
    <string name="edit_tier_list">Edit tier list</string>
    <string name="go_to_my_tier_lists">Go To My Tier Lists</string>
    <string name="add_a_new_tier">Add a new Tier</string>
    <string name="share_tier_list_as_template">Share Tier List as Template</string>
    <string name="add_tier_item">Add Tier Item</string>
    <string name="delete">Delete</string>
    <string name="tier_item">Tier Item</string>
    <string name="configure_tier">Configure Tier</string>
    <string name="move_tier_up">Move Tier up</string>
    <string name="move_tier_down">Move Tier down</string>
    <string name="edit_an_item">Edit an Item</string>
    <string name="explanation_hint">Placement Explanation</string>
    <string name="save_button">Save</string>
    <string name="change_image">Change Image</string>
    <string name="share_tier_list_as_template_title">Publish Tier List as a Template?</string>
    <string name="share_tier_list_as_template_message">This creates a blank template for others to use. Your personal rankings will stay unchanged.</string>
    <string name="publish">Publish\n</string>
    <string name="cancel">Cancel\n</string>
    <string name="template_created">Template Published</string>
    <string name="dragging_instructions">Long Press to Drag</string>
</resources>