<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.TierItemCreationFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#3A3737"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <View
                android:id="@+id/handle"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_marginBottom="16dp"
                android:background="#B6B6B6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragmentTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginTop="14dp"
                android:text="@string/add_an_item"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="488dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/item_name"
                android:textColorHint="#BDBDBD"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="488dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/item_description"
                android:textColorHint="#BDBDBD"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"
                    android:gravity="top"
                    android:minLines="4"
                    android:maxLines="4"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/selectImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/select_image"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

            <ImageButton
                android:id="@+id/selectImageButton"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/dashed_border"
                android:contentDescription="@string/select_thumbnail_image"
                android:foreground="?attr/selectableItemBackground"
                android:padding="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/add_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectImageLabel" />

            <Button
                android:id="@+id/createTierListItemButton"
                style="@style/Widget.App.Button.Primary"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="320dp"
                android:layout_marginTop="32dp"
                android:text="@string/create_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectImageButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
