<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    app:cardBackgroundColor="#3A3737"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/image_button_background"
            android:backgroundTint="#454545"

            android:contentDescription="@string/edit_alt_text"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/edit_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/configButton"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#6DED4B" />

        <ImageButton
            android:id="@+id/configButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/image_button_background"
            android:backgroundTint="#454545"

            android:contentDescription="@string/configure_tier_list"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tiersettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFC107" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/image_button_background"
            android:backgroundTint="#454545"
            android:contentDescription="@string/delete_alt_text"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/delete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FF5B5B" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>