<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.TierListCreationFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#3A3737"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <View
                android:id="@+id/handle"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_marginBottom="16dp"
                android:background="#B6B6B6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragmentTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginTop="14dp"
                android:text="@string/edit_tier"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/tier_label"
                android:orientation="vertical"
                android:textColorHint="#BDBDBD"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentTitle"
                app:layout_constraintWidth_max="488dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="3"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/selectImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/choose_a_color"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:constraint_referenced_ids="cardOne,cardTwo,cardThree,cardFour,cardFive,cardSix,cardSeven,cardEight,cardNine,cardTen,cardEleven,cardTwelve"
                app:flow_horizontalGap="8dp"
                app:flow_verticalGap="8dp"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectImageLabel" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardOne"
                style="@style/ColorCardStyle"
                android:tag="#ED0925"
                app:cardBackgroundColor="#ED0925" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTwo"
                style="@style/ColorCardStyle"
                android:tag="#E91E63"
                app:cardBackgroundColor="#E91E63" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardThree"
                style="@style/ColorCardStyle"
                android:tag="#9C27B0"
                app:cardBackgroundColor="#9C27B0" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardFour"
                style="@style/ColorCardStyle"
                android:tag="#3F51B5"
                app:cardBackgroundColor="#3F51B5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardFive"
                style="@style/ColorCardStyle"
                android:tag="#03A9F4"
                app:cardBackgroundColor="#03A9F4" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardSix"
                style="@style/ColorCardStyle"
                android:tag="#00BCD4"
                app:cardBackgroundColor="#00BCD4" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardSeven"
                style="@style/ColorCardStyle"
                android:tag="#009688"
                app:cardBackgroundColor="#009688" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardEight"
                style="@style/ColorCardStyle"
                android:tag="#4CAF50"
                app:cardBackgroundColor="#4CAF50" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardNine"
                style="@style/ColorCardStyle"
                android:tag="#8BC34A"
                app:cardBackgroundColor="#8BC34A" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTen"
                style="@style/ColorCardStyle"
                android:tag="#FFEB3B"
                app:cardBackgroundColor="#FFEB3B" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardEleven"
                style="@style/ColorCardStyle"
                android:tag="#FF9800"
                app:cardBackgroundColor="#FF9800" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTwelve"
                style="@style/ColorCardStyle"
                android:tag="#FF7322"
                app:cardBackgroundColor="#FF7322" />


            <Button
                android:id="@+id/deleteButton"
                style="@style/Widget.App.Button.Primary"
                android:layout_width="0dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/delete"
                app:layout_constraintEnd_toStartOf="@+id/createTierListButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flow" />

            <Button
                android:id="@+id/createTierListButton"
                style="@style/Widget.App.Button.Primary"
                android:layout_width="0dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:text="@string/create_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/deleteButton"
                app:layout_constraintTop_toBottomOf="@+id/flow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
